--- a/CSS/stylekontakt.css
+++ b/CSS/stylekontakt.css
@@ -62,6 +62,9 @@ nav .fa{
 }
 
 @media (max-width: 678px){              /*----sve za manje uredjaje----*/
+    .kontakt .sadrzaj h1{
+        font-size: 40px;
+    }
     .meni ul li{
         display: block;
     }
@@ -106,10 +109,10 @@ nav .fa{
     max-width: 800px;
     text-align: center;
 }
-.kontakt .sadrzaj h2{
+.kontakt .sadrzaj h1{
     padding: 150px 10px 10px;
     font-size: 80px;
-    font-weight: 500;
+    
     color: white;
 }
 .kontakt .sadrzaj p{
@@ -231,6 +234,9 @@ nav .fa{
 }
 
 @media (max-width: 991px){
+    .kontakt .sadrzaj h1{
+        font-size: 40px;
+    }
     .kontakt{
         padding: 50px;
     }
