--- a/CSS/styleusluge.css
+++ b/CSS/styleusluge.css
@@ -4,7 +4,13 @@
     font-family: 'Ubuntu', sans-serif;
     
     box-sizing: border-box;    /*----ovo je za celu stranicu----*/
-}                                                   
+}  
+:root {
+    --gold: #ffb338;
+    --light-shadow: #77571d;
+    --dark-shadow: #3e2904;
+  }
+
 .header{                                 /*----sve u klasi header----*/
     min-height: 85vh;
     width: 100%;
@@ -203,7 +209,7 @@ h1{
     font-size: 20px;
 }
 
-.usluge-kol :hover{
+.usluge-kol p:hover{
     font-size: 25px;
     transition: 1s;
 }
@@ -212,3 +218,38 @@ h1{
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
+
+.wrapper {
+    display: grid;
+    grid-template-areas: 'overlap';
+    place-content: center;
+  }
+.wrapper > div {
+    background-clip: text;  
+    -webkit-background-clip: text;
+    color: #363833;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+    font-size: clamp( 3em, 8vw, 5rem);
+    grid-area: overlap;
+    letter-spacing: 1px;
+    -webkit-text-stroke: 4px transparent;
+  }
+  div.bg {
+    background-image: repeating-linear-gradient( 105deg, 
+      var(--gold) 0% , 
+      var(--dark-shadow) 5%,
+      var(--gold) 12%);
+    color: transparent;
+    filter: drop-shadow(5px 3px 5px black);
+    transform: scaleY(1.05);
+    transform-origin: top;
+  }
+  div.fg{
+    background-image: repeating-linear-gradient( 5deg,  
+      var(--gold) 0% , 
+      var(--light-shadow) 23%, 
+      var(--gold) 31%);
+    color: #1e2127;
+    transform: scale(1);
+  }
